Change content showing on card, fix spacing

--- a/client/src/components/WorkshopCard/styles.css
+++ b/client/src/components/WorkshopCard/styles.css
@@ -15,7 +15,7 @@
 }
 
 .description {
-  height: 4em !important;
+  height: 6em !important;
 }
 
 .content {
